Fix overflowing time picker

--- a/src/domain/event/event.module.scss
+++ b/src/domain/event/event.module.scss
@@ -74,7 +74,7 @@
       grid-template-columns: auto auto;
     }
     @include respond-above(md) {
-      grid-template-columns: 2fr 1fr 50%;
+      grid-template-columns: 3fr 2fr 55%;
     }
   }
 }
